<resources>
    <string name="app_name">Card Game App</string>
    <string name="chhose_game_text">Choose a game...</string>
    <string name="blackjack_button">BlackJack</string>
    <string name="player1_name">Player 1</string>
    <string name="player2_name">Player 2</string>
    <string name="enter_player1_name">Enter Player 1 Name</string>
    <string name="enter_player2_name">Enter Player 2 Name</string>
    <string name="deal_cards">Deal Cards</string>
    <string name="stick_button">stick</string>
    <string name="hit_button">hit</string>
    <string name="choose_another_game">Choose another game</string>
    <string name="play_blackjack_again">Play again</string>
    <string name="enter_player_name">Enter Player Name</string>
    <string name="deal_card">Deal Cards</string>
    <string name="dealer">Dealer</string>
    <string name="highest_card_button">Highest Card</string>
    <string name="play_game">Play Game</string>
    <string name="back_to_all_games">Back To All Games</string>
</resources>
