<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.heather.blackjack.Activities.PlayerNameHighestCardActivity">

    <Button
        android:id="@+id/play_game_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="casual"
        android:onClick="onPlayGameButtonClicked"
        android:text="@string/play_game"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_player_name" />

    <Button
        android:id="@+id/back_to_all_games_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150sp"
        android:layout_height="45sp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="casual"
        android:onClick="onBackToAllGamesButtonClicked"
        android:text="@string/back_to_all_games"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/enter_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/enter_player_name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
