<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.heather.blackjack.Activities.PlayHighestCardActivity">

    <TextView
        android:id="@+id/border_box4"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/border_shape"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/border_box2"
        android:layout_width="280dp"
        android:layout_height="120dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/border_shape"
        app:layout_constraintBottom_toTopOf="@+id/player1_deal_card"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/border_box3"
        android:layout_width="280dp"
        android:layout_height="120dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/border_shape"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1_deal_card" />

    <TextView
        android:id="@+id/border_box1"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/border_shape"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/player1_deal_card"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="casual"
        android:onClick="onPlayer1DealCardButtonClicked"
        android:text="@string/deal_card"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/border_box4"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/play_again_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="casual"
        android:onClick="onPlayAgainButtonClicked"
        android:text="@string/play_blackjack_again"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/border_box4"
        app:layout_constraintLeft_toLeftOf="@+id/border_box4"
        app:layout_constraintTop_toTopOf="@+id/border_box4" />

    <Button
        android:id="@+id/choose_another_game_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="casual"
        android:onClick="onChooseAnotherGameButtonClicked"
        android:text="@string/choose_another_game"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/border_box4"
        app:layout_constraintRight_toRightOf="@+id/border_box4"
        app:layout_constraintTop_toTopOf="@+id/border_box4" />

    <TextView
        android:id="@+id/player2_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="casual"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/border_box3"
        app:layout_constraintRight_toLeftOf="@+id/player2_hand_image"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintBottom_toBottomOf="@+id/border_box3"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/player1_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="casual"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/player1_hand_image"
        app:layout_constraintRight_toRightOf="@+id/border_box2"
        app:layout_constraintBottom_toBottomOf="@+id/border_box2"
        android:layout_marginBottom="24dp" />

    <ImageView
        android:id="@+id/player1_hand_image"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/player_hand"
        android:layout_marginLeft="25dp"
        app:layout_constraintLeft_toLeftOf="@+id/border_box2"
        app:layout_constraintTop_toTopOf="@+id/border_box2"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/border_box2"
        android:layout_marginBottom="0dp" />

    <ImageView
        android:id="@+id/player2_hand_image"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/player_hand"
        app:layout_constraintTop_toTopOf="@+id/border_box3"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/border_box3"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="@+id/border_box3" />

    <TextView
        android:id="@+id/player1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:fontFamily="casual"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toRightOf="@+id/player1_hand_image"
        app:layout_constraintRight_toRightOf="@+id/border_box2"
        app:layout_constraintTop_toTopOf="@+id/border_box2"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/player2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="casual"
        android:text="@string/dealer"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/border_box3"
        app:layout_constraintRight_toLeftOf="@+id/player2_hand_image"
        app:layout_constraintTop_toTopOf="@+id/border_box3"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/information_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/border_box1"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/border_box1" />
</android.support.constraint.ConstraintLayout>
